used random forest and got a higher acc

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,28 +176,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.65\n",
+      "Accuracy: 0.66\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.65      0.60      0.62      1822\n",
       "           1       0.66      0.71      0.68      2000\n",
       "\n",
-      "    accuracy                           0.65      3822\n",
+      "    accuracy                           0.66      3822\n",
       "   macro avg       0.65      0.65      0.65      3822\n",
-      "weighted avg       0.65      0.65      0.65      3822\n",
+      "weighted avg       0.66      0.66      0.65      3822\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[1089  733]\n",
-      " [ 589 1411]]\n",
-      "Best hyperparameter: {'C': 10}\n"
+      "[[1090  732]\n",
+      " [ 585 1415]]\n",
+      "Random Forest Accuracy:\n",
+      "0.7127158555729984\n"
      ]
     }
    ],
@@ -209,18 +211,28 @@
     "# Make Predictions\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
+    "# Random Forest\n",
+    "\n",
+    "rf_model = RandomForestClassifier(n_estimators=200, random_state=42)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
+    "\n",
+    "\n",
     "# Evaluate Model\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(f'Accuracy: {accuracy:.2f}')\n",
     "print('Classification Report:')\n",
     "print(classification_report(y_test, y_pred))\n",
     "print('Confusion Matrix:')\n",
-    "print(confusion_matrix(y_test, y_pred))"
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "\n",
+    "print(\"Random Forest Accuracy:\")\n",
+    "print(accuracy_score(y_test, y_pred_rf))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,19 +243,19 @@
       "Feature Importance:\n",
       "                                              Feature  Importance\n",
       "0                                         rating_diff    0.958048\n",
-      "7   opening_simplified_Scandinavian Defense: Miese...    0.041554\n",
-      "2                  opening_simplified_Horwitz Defense    0.001247\n",
+      "7   opening_simplified_Scandinavian Defense: Miese...    0.041556\n",
+      "2                  opening_simplified_Horwitz Defense    0.001249\n",
       "3                            opening_simplified_Other    0.000000\n",
       "8                      opening_simplified_Scotch Game    0.000000\n",
-      "4   opening_simplified_Queen's Pawn Game: Chigorin...   -0.001919\n",
-      "5   opening_simplified_Queen's Pawn Game: Mason At...   -0.013479\n",
-      "10  opening_simplified_Sicilian Defense: Bowdler A...   -0.022134\n",
-      "9                 opening_simplified_Sicilian Defense   -0.026817\n",
-      "12                           victory_status_outoftime   -0.034745\n",
-      "13                              victory_status_resign   -0.039369\n",
-      "6             opening_simplified_Scandinavian Defense   -0.040375\n",
-      "11            opening_simplified_Van't Kruijs Opening   -0.063160\n",
-      "1                                           num_moves   -0.081291\n"
+      "4   opening_simplified_Queen's Pawn Game: Chigorin...   -0.001918\n",
+      "5   opening_simplified_Queen's Pawn Game: Mason At...   -0.013478\n",
+      "10  opening_simplified_Sicilian Defense: Bowdler A...   -0.022132\n",
+      "9                 opening_simplified_Sicilian Defense   -0.026816\n",
+      "12                           victory_status_outoftime   -0.034734\n",
+      "13                              victory_status_resign   -0.039345\n",
+      "6             opening_simplified_Scandinavian Defense   -0.040373\n",
+      "11            opening_simplified_Van't Kruijs Opening   -0.063158\n",
+      "1                                           num_moves   -0.081290\n"
      ]
     }
    ],
