added a preformance metric and a feature importance for random forest

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ace_tools'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mace_tools\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtools\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GridSearchCV\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ace_tools'"
+     ]
+    }
+   ],
    "source": [
     "# Import necessary libraries\n",
     "import pandas as pd\n",
@@ -16,12 +28,12 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -249,13 +261,30 @@
       "8                      opening_simplified_Scotch Game    0.000000\n",
       "4   opening_simplified_Queen's Pawn Game: Chigorin...   -0.001918\n",
       "5   opening_simplified_Queen's Pawn Game: Mason At...   -0.013478\n",
-      "10  opening_simplified_Sicilian Defense: Bowdler A...   -0.022132\n",
+      "10  opening_simplified_Sicilian Defense: Bowdler A...   -0.022133\n",
       "9                 opening_simplified_Sicilian Defense   -0.026816\n",
-      "12                           victory_status_outoftime   -0.034734\n",
-      "13                              victory_status_resign   -0.039345\n",
-      "6             opening_simplified_Scandinavian Defense   -0.040373\n",
+      "12                           victory_status_outoftime   -0.034736\n",
+      "13                              victory_status_resign   -0.039352\n",
+      "6             opening_simplified_Scandinavian Defense   -0.040374\n",
       "11            opening_simplified_Van't Kruijs Opening   -0.063158\n",
-      "1                                           num_moves   -0.081290\n"
+      "1                                           num_moves   -0.081286\n",
+      "\n",
+      "Feature Importance:\n",
+      "                                              Feature  Importance\n",
+      "0                                         rating_diff    0.496304\n",
+      "1                                           num_moves    0.473556\n",
+      "13                              victory_status_resign    0.007049\n",
+      "12                           victory_status_outoftime    0.004265\n",
+      "3                            opening_simplified_Other    0.003315\n",
+      "11            opening_simplified_Van't Kruijs Opening    0.002532\n",
+      "9                 opening_simplified_Sicilian Defense    0.001717\n",
+      "10  opening_simplified_Sicilian Defense: Bowdler A...    0.001713\n",
+      "8                      opening_simplified_Scotch Game    0.001690\n",
+      "4   opening_simplified_Queen's Pawn Game: Chigorin...    0.001657\n",
+      "6             opening_simplified_Scandinavian Defense    0.001590\n",
+      "7   opening_simplified_Scandinavian Defense: Miese...    0.001573\n",
+      "5   opening_simplified_Queen's Pawn Game: Mason At...    0.001571\n",
+      "2                  opening_simplified_Horwitz Defense    0.001469\n"
      ]
     }
    ],
@@ -264,7 +293,56 @@
     "feature_importance = pd.DataFrame({'Feature': features, 'Importance': model.coef_[0]})\n",
     "feature_importance = feature_importance.sort_values(by=\"Importance\", ascending=False)\n",
     "print(\"\\nFeature Importance:\")\n",
-    "print(feature_importance)"
+    "print(feature_importance)\n",
+    "\n",
+    "# ramdom forest feature importance\n",
+    "rf_importance = pd.DataFrame({'Feature': features, 'Importance': rf_model.feature_importances_})\n",
+    "rf_importance = rf_importance.sort_values(by='Importance', ascending=False)\n",
+    "print(\"\\nFeature Importance:\")\n",
+    "print(rf_importance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Model Accuracy Precision (White) Recall (White) F1-Score (White) Precision (Black) Recall (Black) F1-Score (Black)\n",
+      "Logistic Regression      66%               66%            71%              68%               65%            60%              62%\n",
+      "      Random Forest      71%               73%            72%              72%               70%            70%              70%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the preformance metric\n",
+    "\n",
+    "# Generate performance metrics dynamically\n",
+    "performance_data_dynamic = {\n",
+    "    \"Model\": [\"Logistic Regression\", \"Random Forest\"],\n",
+    "    \"Accuracy\": [f\"{accuracy_score(y_test, y_pred) * 100:.0f}%\", f\"{accuracy_score(y_test, y_pred_rf) * 100:.0f}%\"],\n",
+    "    \"Precision (White)\": [f\"{classification_report(y_test, y_pred, output_dict=True)['1']['precision'] * 100:.0f}%\",\n",
+    "                          f\"{classification_report(y_test, y_pred_rf, output_dict=True)['1']['precision'] * 100:.0f}%\"],\n",
+    "    \"Recall (White)\": [f\"{classification_report(y_test, y_pred, output_dict=True)['1']['recall'] * 100:.0f}%\",\n",
+    "                       f\"{classification_report(y_test, y_pred_rf, output_dict=True)['1']['recall'] * 100:.0f}%\"],\n",
+    "    \"F1-Score (White)\": [f\"{classification_report(y_test, y_pred, output_dict=True)['1']['f1-score'] * 100:.0f}%\",\n",
+    "                         f\"{classification_report(y_test, y_pred_rf, output_dict=True)['1']['f1-score'] * 100:.0f}%\"],\n",
+    "    \"Precision (Black)\": [f\"{classification_report(y_test, y_pred, output_dict=True)['0']['precision'] * 100:.0f}%\",\n",
+    "                          f\"{classification_report(y_test, y_pred_rf, output_dict=True)['0']['precision'] * 100:.0f}%\"],\n",
+    "    \"Recall (Black)\": [f\"{classification_report(y_test, y_pred, output_dict=True)['0']['recall'] * 100:.0f}%\",\n",
+    "                       f\"{classification_report(y_test, y_pred_rf, output_dict=True)['0']['recall'] * 100:.0f}%\"],\n",
+    "    \"F1-Score (Black)\": [f\"{classification_report(y_test, y_pred, output_dict=True)['0']['f1-score'] * 100:.0f}%\",\n",
+    "                         f\"{classification_report(y_test, y_pred_rf, output_dict=True)['0']['f1-score'] * 100:.0f}%\"]\n",
+    "}\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "performance_df_dynamic = pd.DataFrame(performance_data_dynamic)\n",
+    "\n",
+    "# Print the table\n",
+    "print(performance_df_dynamic.to_string(index=False))"
    ]
   }
  ],
